# london_housing_ai

./: .dockerignore  .env  .flake8.backup  .gitignore  Dockerfile  README.md  compose.yml  london_housing_2025_06_30.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml
backend/: Dockerfile  Dockerfile.mlflow  Dockerfile.railway  README.md  TERRAFORM_README.md  compose.yml  pyproject.toml  pytest_setup.md  setup.cfg
backend/artifacts/: data_quality_45ff70116a663777_2026-02-18 16:25:09.952192+00:00.json  feature_importance.json  lookup_tables.json
backend/artifacts/model/: MLmodel  conda.yaml  input_example.json  model.cb  requirements.txt  serving_input_example.json
backend/src/london_housing_ai/: augmenters.py  cleaners.py  data_quality_reporter.py  experiment_logger.py  feature_engineering.py  file_injest.py  loaders.py  models.py  persistence.py  pipeline.py  serve_transformer.py  train_main.py
backend/src/london_housing_ai/api/: __init__.py  app.py  main_api.py  schemas.py
backend/src/london_housing_ai/api/routers/: health.py  mlflow.py  predict.py
backend/src/london_housing_ai/api/services/: __init__.py  mlflow_service.py  model_cache.py  transformer_cache.py
backend/src/london_housing_ai/config_schemas/: TrainConfig.py  __init__.py
backend/src/london_housing_ai/configs/: config_dataset1.yaml
backend/src/london_housing_ai/scripts/: export_lookup_tables.py
backend/src/london_housing_ai/services/: __init__.py  postcode_service.py
backend/src/london_housing_ai/utils/: checksum.py  create_files.py  logger.py  paths.py
backend/tests/: students_simple.noheaders.csv  test_api.py  test_apis.py  test_cleaners.py  test_data_quality_reporter.py  test_experiment_logger.py  test_experiment_logging.py  test_feature_engineering.py  test_loaders.py  test_train_main_e2e.py  test_train_main_local.py
backend/tests/test_resources/: missing_keys_cleaning_config.yaml  test_augment_config.yaml  test_cleaning_config.yaml  test_train_config.yaml
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
data_quality/: quick_eda_for_data_quality.ipynb
data_quality/.ipynb_checkpoints/: quick_eda_for_data_quality-checkpoint.ipynb
frontend/: .env.production  README.md  package.json  pnpm-lock.yaml  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/components/: DashboardPage.tsx  LineChartCard.tsx  PageContents.tsx  TabContainer.tsx
frontend/src/components/data_quality/: DataQuality.tsx
frontend/src/components/model_performance/: ModelMetricCard.tsx  ModelPerformance.tsx
frontend/src/components/prediction/: PredictTab.tsx
frontend/src/lib/: constants.ts  utils.ts
frontend/src/types/: mlflow.ts  predict.ts  props.ts
london_housing_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
mlruns/0/models/m-2b622dca39ca458883af470ba02ae1a9/artifacts/: MLmodel  conda.yaml  model.cb  python_env.yaml
mlruns/0/models/m-a1f1fe1ff9b84715a633bf1d92bb2a50/artifacts/: MLmodel  input_example.json  model.cb  requirements.txt  serving_input_example.json
mlruns/0/models/m-bc633d9479304c8eb32480939fa7e3ab/artifacts/: MLmodel  model.cb
src/: DBEngine.py  __init__.py  augmenters.py  cleaners.py  feature_engineering.py  file_injest.py  loaders.py  main.py  models.py  persistence.py  pipeline.py  ray_setup.py  requirements.txt  tempCodeRunnerFile.py  train_main.py
src/api/: main.py
src/cleaner/: AugmentedDataMerger.py  DataCleaner.py
src/config_schemas/: AugmentConfig.py  CleaningConfig.py  FeatureConfig.py  ParquetConfig.py  TrainConfig.py
src/configs/: config_dataset2.yaml
src/data/domestic-E09000001-City-of-London/: recommendations.csv
src/data_lake/silver/: tmp.parquet
src/loader/: CSVLoader.py
src/london_housing_ai/: __init__.py  augmenters.py  cleaners.py  experiment_logger.py  feature_engineering.py  file_injest.py  loaders.py  models.py  persistence.py  pipeline.py  predict.py  train_main.py
src/london_housing_ai/api/: main.py
src/london_housing_ai/config_schemas/: AugmentConfig.py  CleaningConfig.py  ParquetConfig.py  __init__.py
src/london_housing_ai/configs/: config_dataset2.yaml
src/london_housing_ai/data_lake/silver/sold_year=1995/: afd39c01f061421e80fa19fb40b9203c-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=1996/: 101b3f81b1ad40ffbc63d80c24c80438-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=1997/: c591322926114896b8ae7740f42d7cde-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=1998/: c591322926114896b8ae7740f42d7cde-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=1999/: ce28b16e9adf44ee94e5c0981b78e6ef-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=2000/: ce28b16e9adf44ee94e5c0981b78e6ef-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=2001/: afd39c01f061421e80fa19fb40b9203c-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=2002/: 101b3f81b1ad40ffbc63d80c24c80438-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=2003/: ce28b16e9adf44ee94e5c0981b78e6ef-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=2004/: 101b3f81b1ad40ffbc63d80c24c80438-0.parquet
src/london_housing_ai/data_lake/silver/sold_year=2005/: 101b3f81b1ad40ffbc63d80c24c80438-0.parquet
src/london_housing_ai/utils/: checksum.py
src/train/: main.py
src/trainer/: ModelTrainer.py
src/utils/: checksum.py  data_utils.py
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/mlflow/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf
terraform/modules/storage/: main.tf  outputs.tf  variables.tf
tests/: test_augmenters.py  test_cleaners.py  test_experiment_logging.py  test_feature_engineering.py  test_loaders.py  test_pipeline.py  test_train_main_e2e.py
tests/fixtures/: sample_housing.csv
tests/test_resources/: invalid_test_config.yaml  missing_keys_aug_config.yaml  missing_keys_cleaning_config.yaml  test_cleaning_config.yaml  test_train_config.yaml
typings/: dataset.pyi
(+20 files in other folders)
