[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

# [project]
# dependencies = [
#     # Core data science and ML libraries
#     "pandas==2.3.1",
#     "numpy==2.3.1",
#     "scikit-learn==1.7.0",
#     "scipy==1.16.0",
#     "matplotlib==3.10.3",
#     "plotly==6.2.0",
#     "pillow==11.3.0",

#     # MLflow and experiment tracking
#     "mlflow==3.1.1",
#     "mlflow-skinny==3.1.1",

#     # Database and storage
#     "psycopg2-binary==2.9.10",
#     "SQLAlchemy==2.0.41",
#     "alembic==1.16.2",
#     "google-cloud-storage==3.2.0",
#     "google-cloud-core==2.4.3",
#     "pyarrow==20.0.0",

#     # API and web framework
#     "fastapi==0.115.14",
#     "fastapi-cli==0.0.7",
#     "uvicorn==0.35.0",
#     "starlette==0.46.2",
#     "pydantic==2.11.7",
#     "pydantic_core==2.33.2",
#     "aiohttp==3.12.13",
#     "aiohttp-cors==0.8.1",
#     "async-timeout==5.0.1",
#     "httpx==0.28.1",
#     "python-multipart==0.0.20",

#     # Utilities
#     "python-dotenv==1.1.1",
#     "PyYAML==6.0.2",
#     "click==8.2.1",
#     "rich==14.0.0",
#     "requests==2.32.4",
# ]
# name = "london-housing-ai"
# version = "0.1.0"
# description = "AI Platform for training, data ingestion, and model versioning with MLflow"
# requires-python = ">=3.12.11"
# readme = "README.md"

# [project.optional-dependencies]
# # ML Training and model development
# training = [
#     "catboost==1.2.8",
#     "ray==2.49.2",
#     "tensorboardX==2.6.4",
#     "joblib==1.5.1",
#     "cloudpickle==3.1.1",
#     "dill==0.4.0",
# ]

# # Development tools
# dev = [
#     "pytest==8.4.1",
#     "black==25.1.0",
#     "flake8>=5.0.0",
#     "pylint==3.3.7",
#     "isort==6.0.1",
#     "mypy>=1.0.0",
#     "mypy_extensions==1.1.0",
#     "debugpy==1.8.16",
#     "jupyter",                # Add if you need Jupyter
#     # Type stubs for external libraries
#     "pandas-stubs>=2.0.0",
#     "types-PyYAML>=6.0.0",
#     "types-psycopg2>=2.9.0",
#     "types-requests>=2.28.0",
# ]

# # Production serving and deployment
# serving = [
#     "gunicorn==23.0.0",
#     "docker==7.1.0",
#     "prometheus_client==0.22.1",
#     "opentelemetry-api==1.34.1",
#     "opentelemetry-sdk==1.34.1",
#     "opentelemetry-exporter-prometheus==0.55b1",
# ]

# # Data processing and validation
# data = [
#     "smart_open==7.3.0.post1",
#     "fsspec==2025.7.0",
#     "jsonschema==4.25.1",
#     "jsonschema-specifications==2025.4.1",
# ]

# # Build and deployment tools
# build = [
#     "build==1.2.2.post1",
#     "pip-tools==7.4.1",
#     "setuptools==80.9.0",
#     "wheel==0.45.1",
# ]

# # All dependencies for complete development setup
# all = [
#     "london-housing-ai[training]",
#     "london-housing-ai[dev]",
#     "london-housing-ai[serving]",
#     "london-housing-ai[data]",
#     "london-housing-ai[build]",
# ]

[tool.poetry]
name = "london_housing_ai"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.12.11"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.12.13"
aiohttp-cors = "0.8.1"
aiosignal = "1.4.0"
alembic = "1.16.2"
annotated-types = "0.7.0"
anyio = "4.9.0"
astroid = "3.3.11"
async-timeout = "5.0.1"
attrs = "25.3.0"
black = "25.1.0"
blinker = "1.9.0"
build = "1.2.2.post1"
cachetools = "5.5.2"
catboost = "1.2.8"
certifi = "2025.6.15"
charset-normalizer = "3.4.2"
click = "8.2.1"
cloudpickle = "3.1.1"
colorful = "0.5.7"
contourpy = "1.3.2"
cycler = "0.12.1"
databricks-sdk = "0.57.0"
debugpy = "1.8.16"
decorator = "5.2.1"
dill = "0.4.0"
distlib = "0.4.0"
dnspython = "2.7.0"
docker = "7.1.0"
email_validator = "2.2.0"
fastapi = "0.115.14"
fastapi-cli = "0.0.7"
filelock = "3.19.1"
Flask = "3.1.1"
fonttools = "4.58.4"
frozenlist = "1.7.0"
fsspec = "2025.7.0"
gitdb = "4.0.12"
GitPython = "3.1.44"
google-api-core = "2.25.1"
google-auth = "2.40.3"
google-auth-oauthlib = "1.2.2"
google-cloud-core = "2.4.3"
google-cloud-storage = "3.2.0"
google-crc32c = "1.7.1"
google-resumable-media = "2.7.2"
googleapis-common-protos = "1.70.0"
graphene = "3.4.3"
graphql-core = "3.2.6"
graphql-relay = "3.2.0"
graphviz = "0.21"
grpcio = "1.74.0"
gunicorn = "23.0.0"
h11 = "0.16.0"
httpcore = "1.0.9"
httptools = "0.6.4"
httpx = "0.28.1"
idna = "3.10"
importlib_metadata = "8.7.0"
iniconfig = "2.1.0"
isort = "6.0.1"
itsdangerous = "2.2.0"
Jinja2 = "3.1.6"
joblib = "1.5.1"
jsonschema = "4.25.1"
jsonschema-specifications = "2025.4.1"
kiwisolver = "1.4.8"
Mako = "1.3.10"
markdown-it-py = "3.0.0"
MarkupSafe = "3.0.2"
matplotlib = "3.10.3"
mccabe = "0.7.0"
mdurl = "0.1.2"
mlflow = "3.1.1"
mlflow-skinny = "3.1.1"
msgpack = "1.1.1"
multidict = "6.6.3"
mypy_extensions = "1.1.0"
narwhals = "1.45.0"
numpy = "2.3.1"
oauthlib = "3.3.1"
opencensus = "0.11.4"
opencensus-context = "0.1.3"
opentelemetry-api = "1.34.1"
opentelemetry-exporter-prometheus = "0.55b1"
opentelemetry-proto = "1.36.0"
opentelemetry-sdk = "1.34.1"
opentelemetry-semantic-conventions = "0.55b1"
packaging = "25.0"
pandas = "2.3.1"
pathspec = "0.12.1"
pillow = "11.3.0"
pip-tools = "7.4.1"
platformdirs = "4.3.8"
plotly = "6.2.0"
pluggy = "1.6.0"
prometheus_client = "0.22.1"
propcache = "0.3.2"
proto-plus = "1.26.1"
protobuf = "6.31.1"
psycopg2-binary = "2.9.10"
py-spy = "0.4.1"
pyarrow = "20.0.0"
pyasn1 = "0.6.1"
pyasn1_modules = "0.4.2"
pydantic = "2.11.7"
pydantic_core = "2.33.2"
Pygments = "2.19.2"
pylint = "3.3.7"
pyparsing = "3.2.3"
pyproject_hooks = "1.2.0"
pytest = "8.4.1"
python-dateutil = "2.9.0.post0"
python-dotenv = "1.1.1"
python-multipart = "0.0.20"
pytz = "2025.2"
PyYAML = "6.0.2"
ray = "2.49.2"
referencing = "0.36.2"
requests = "2.32.4"
requests-oauthlib = "2.0.0"
rich = "14.0.0"
rich-toolkit = "0.14.8"
rpds-py = "0.27.0"
rsa = "4.9.1"
scikit-learn = "1.7.0"
scipy = "1.16.0"
setuptools = "80.9.0"
shellingham = "1.5.4"
six = "1.17.0"
smart_open = "7.3.0.post1"
smmap = "5.0.2"
sniffio = "1.3.1"
soupsieve = "2.7"
SQLAlchemy = "2.0.41"
sqlparse = "0.5.3"
starlette = "0.46.2"
tensorboardX = "2.6.4"
threadpoolctl = "3.6.0"
tomlkit = "0.13.3"
typer = "0.16.0"
typing-inspection = "0.4.1"
typing_extensions = "4.14.0"
tzdata = "2025.2"
urllib3 = "2.5.0"
uvicorn = "0.35.0"
uvloop = "0.21.0"
virtualenv = "20.34.0"
watchfiles = "1.1.0"
websockets = "15.0.1"
Werkzeug = "3.1.3"
wheel = "0.45.1"
wrapt = "1.17.3"
yarl = "1.20.1"
zipp = "3.23.0"
testcontainers = {extras = ["postgres"], version = "^4.13.1"}


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "--tb=short --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["london_housing_ai"]

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
show_error_codes = true

# Handle missing imports gracefully
ignore_missing_imports = true

# Local module paths
mypy_path = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["london_housing_ai*"]
exclude = ["tests*"]

# [project.urls]
# "Homepage" = "https://github.com/jee3153/london_housing_ai"
# "Repository" = "https://github.com/jee3153/london_housing_ai"
# "Bug Tracker" = "https://github.com/jee3153/london_housing_ai/issues"
